--- a/expense-tracker/src/main/resources/application.yml
+++ b/expense-tracker/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 # Application server config.
 server:
   port: 8081
+  
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/sys
+    username: admin
+    password: crazy31$
