API for feching user details.

--- a/expense-tracker/pom.xml
+++ b/expense-tracker/pom.xml
@@ -39,9 +39,9 @@
 
         <!-- enable this dependency after adding the DB config. This expects a DataSource to be configured. -->
         <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                   <artifactId>spring-boot-starter-data-jdbc</artifactId>
-               </dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,12 +63,12 @@
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-<dependency>
-    <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.19</version>
-</dependency>
-        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
     </dependencies>
     <build>
         <pluginManagement>
@@ -83,5 +83,11 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
