--- a/expense-tracker/src/main/resources/application.yml
+++ b/expense-tracker/src/main/resources/application.yml
@@ -10,3 +10,6 @@ spring:
 #    url: jdbc:mysql://localhost:3306/expense_tracker
 #    username: admin
 #    password: Admin@123
+
+logging:
+    path: C:/Chitra/Expense-Tracker
